# bytical-talk

./: .env.example  .gitignore  LICENSE  MODEL_CARD.md  PLAN_C.md  README.md  ROADMAP.md  pyproject.toml
bytical_talk/: __init__.py  cli.py  pipeline.py
bytical_talk/arch/: __init__.py  film.py
bytical_talk/audio/: __init__.py  hubert.py
bytical_talk/brain/: __init__.py  autoconfig.py  director.py  llm.py  qc.py
bytical_talk/losses/: __init__.py  improved.py
bytical_talk/render/: __init__.py  adaptive.py  fast.py  infer.py  smoothing.py
configs/: default.yaml
scripts/: _hf_push.py  fetch_upstream.sh  make_testset.py  score_syncnet.py
tests/: test_adaptive.py  test_adaptive_budget.py  test_brain.py  test_film.py  test_stabilize.py
